# meeting-archaeologist

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  meeting_archaeologist_brief.md  pyproject.toml  setup-windows.bat
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_meetings_and_contradictions.py  003_add_transcript_to_meetings.py
app/: main.py
app/agents/: contradiction_detector.py  embedder.py  extractor.py  merger.py  topic_resolver.py
app/api/routes/: calendar.py  chat.py  contradictions.py  ingestion.py  topics.py  (+1 more)
app/core/: config.py
app/db/: __init__.py  models.py  session.py
app/ingestion/: pipeline.py  vtt.py
app/models/: __init__.py  api.py
data/audio/: tts.py
data/transcripts/: meeting_01_auth_kickoff.txt  meeting_05_cloud_strategy.txt  meeting_06_roadmap.txt  meeting_09_oncall.txt  meeting_10_infra_2026.txt
evals/: ground_truth.json  ground_truth_vtt.json
files/: meeting_01_auth_kickoff.txt  meeting_02_pricing.txt  meeting_03_database.txt  meeting_04_hiring.txt  meeting_07_soc2.txt  meeting_08_frontend.txt
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-build-manifest.json  next-server.js.nft.json  required-server-files.json  routes-manifest.json  trace
scripts/: _common.py  eval_extraction.py  ingest.py  run_local_pipeline.py  stt.py  tts.py
tests/: conftest.py  test_api.py  test_chat.py  test_contradiction_detector.py  test_e2e_smoke.py  test_vtt_parser.py
(+128 files in other folders)
