[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-archaeologist"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.0",
    "google-genai>=1.0",
    "instructor>=1.7",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
