[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-archaeologist"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "edge-tts>=7.0",
    "fastapi>=0.111",
    "google-genai>=1.0",
    "httpx>=0.27",
    "instructor>=1.7",
    "jsonref>=1.1.0",
    "msal>=1.29",
    "numpy>=1.26",
    "pgvector>=0.3",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "structlog>=24.0",
    "tabulate>=0.9",
    "typer>=0.12",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "respx>=0.21",
]
stt = [
    "faster-whisper>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.setuptools.packages.find]
include = ["app*"]
